@@ -73,15 +73,17 @@ class Exception(BaseEvent):
         try:
             exc_type, exc_value, exc_traceback = exc_info
 
-            frames = varmap(
-                lambda k, v: shorten(v),
-                get_stack_info(
-                    iter_traceback_frames(exc_traceback),
-                    with_locals=client.config.collect_local_variables in ('errors', 'all'),
-                    with_source_context=client.config.collect_source in ('errors', 'all'),
-                    include_paths_re=client.include_paths_re,
-                    exclude_paths_re=client.exclude_paths_re,
-                )
+            frames = get_stack_info(
+                iter_traceback_frames(exc_traceback),
+                with_locals=client.config.collect_local_variables in ('errors', 'all'),
+                with_source_context=client.config.collect_source in ('errors', 'all'),
+                include_paths_re=client.include_paths_re,
+                exclude_paths_re=client.exclude_paths_re,
+                locals_processor_func=lambda local_var: varmap(lambda k, val: shorten(
+                    val,
+                    list_length=client.config.local_var_list_max_length,
+                    string_length=client.config.local_var_max_length
+                ), local_var)
             )
 
             culprit = get_culprit(frames, client.config.include_paths, client.config.exclude_paths)
