@@ -27,23 +27,23 @@ default_ports = {
 
 def varmap(func, var, context=None, name=None):
     """
-    Executes ``func(key_name, value)`` on all values
-    recurisively discovering dict and list scoped
+    Executes ``func(key_name, value)`` on all values,
+    recursively discovering dict and list scoped
     values.
     """
     if context is None:
-        context = {}
+        context = set()
     objid = id(var)
     if objid in context:
         return func(name, '<...>')
-    context[objid] = 1
+    context.add(objid)
     if isinstance(var, dict):
         ret = dict((k, varmap(func, v, context, k)) for k, v in compat.iteritems(var))
     elif isinstance(var, (list, tuple)):
-        ret = [varmap(func, f, context, name) for f in var]
+        ret = func(name, [varmap(func, f, context, name) for f in var])
     else:
         ret = func(name, var)
-    del context[objid]
+    context.remove(objid)
     return ret
 
 
